--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@ Contact us
 
 PatrickStudio welcomes you questions or suggestions regarding this Statement of Privacy. If there are any requires regarding this privacy policy you may contact us using the information below.
 
-Mail: PatrickLeeGoGoGo@gmail.com<a href="/about">Read more about my life...</a></p>
+Mail: PatrickLeeGoGoGo@gmail.com</p>
+		</p>Mail: PatrickLeeGoGoGo@gmail.com</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
