--- a/index.html
+++ b/index.html
@@ -6,144 +6,152 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Privacy Policy</h1>
-				<p>Last modified: 13th Jan, 2016.
-
- 
-
-This Statement shows that PatrickStudio promises to protect the user privacy information. In view of the features of online website, PatrickStudio will interact with users inevitably. So, the statement of Privacy applies to the company and the user and governs data collection and usage. By using the PatrickStudio Websites, you consent to the data practices described in this statement.
-
- 
-
-Collection of non-Personal Information
-
-Non-personal information means that these data do not directly identify the user. Information about your computer hardware and software may be collected by PatrickStudio, such as, type of operating devices, offering access to your ISP`s domain name. By collecting these information, PatrickStudio also carry out traffic statistics, so as to improve the management and services.
-
- 
-
-Collection of Personal Information
-
- 
-
-PatrickStudio may also collect anonymous demographic information, which is not unique to you, such as your email address. We may gather additional personal or non-personal information in the future.
-
- 
-
-When you log in our website, it needs to provides some information about yours, with your consent and confirmation, we will collect your personal information through registration forms and other forms. These information maybe include: your basic information( name, sex, age, the date of birth, ID number, Tel No., address, email address ), social networking basic profile information(Apps have a basic connection to a user's Facebook account to ask for permission to post on the user's behalf or to read other fields from the user's timeline or their friends' timelines),Request read permissions (to fill the stream with photos, the user must grant the app two "read permissions" that let the app read the user's photos and their friends' photos), Request publish permissions (the user must grant the app a "publish permission" to share photos).
-
- 
-
-These information are used for the operation of the services, to maintain quality of the service, and to provide general statistics regarding use of the PatrickStudio website. Please be aware that PatrickStudio cannot provides your personal information for other purposes or the third parties without your consent and confirmation.
-
- 
-
-PatrickStudio encourages you to review the privacy statements of websites you choose to link to from https://patrickunity.github.io. So that you can know more about which kinds of information we are collect, use and share. Obviously, we will keep users information and not bring to other Websites. We are not responsible for the privacy statements or other content on websites outside of our website.
-
- 
-
- 
-
-User`s right
-
- 
-
-For the user personal information, they are keep some rights in the social activities:
-
-View the Personal information at any timeComplement and modify the Personal
-Information at any time
-Request delete the Personal information at any time
- 
-
- 
-
-Use of your Personal Information
-
- 
-
-PatrickStudio collects and uses your personal information to operate its websites and deliver the services you have requested. We may also use your personally identifiable information to inform you of other products or services available from data system and its affiliates. Usually, PatrickStudio will contact you by e-mail or phone in 7 workdays. Sometimes, we may also contact you via surveys to conduct research about you opinion of current services or of potential new services that may be offered.
-
- 
-
-PatrickStudio keep track of the websites and pages our users visit within these information which they are collected, in order to know and understand what kinds of products or services are the most popular. This data is used to deliver customized content and advertising within PatrickStudio to customers whose behavior indicates that they are interested in a particular subject field. In addition, the personal information Users provide will allow PatrickStudio to send them messages regarding, among other things, new products, features, enhancements, special offers, upgrade opportunities, contests and other events of their interest. Users may also later opt out of these communications by sending us an email or simply just by uninstalling our Services.
-
- 
-
-Security of your Personal Information
-
- 
-
-PatrickStudio secures your personal information from unauthorized access, use or disclosure.
-
- 
-
-PatrickStudio will disclose your personal information, without notice, only if demand to do like this by law or in the good faith belief that such action is necessary to:
-
-(a) Conform to the edicts of the law or comply with legal process served on PatrickStudio or the site;
-
-(b) Protect and defend the rights or property of PatrickStudio;
-
-(c) And, act under exigent circumstances to protect the personal safety, or the public.
-
- 
-
-Infrequency, we can share data with trusted partners to help perform statistical analysis, send you email or personal mail, provide customer support, or arrange for deliveries. Meanwhile, PatrickStudio guarantees that they do not sell, rent or lease its customer lists to third parties. All such third parties are prohibited from using your personal information and we are required to maintain the confidentiality of your information.
-
- 
-
- 
-
-Analytics, Advertising and Other Services Provided by Other Companies
-
- 
-
-We may allow other third parties companies to serve advertisements in our Services, provide analytics services or other services for the Users experience. These companies may use cookies, web beacons, Users account information (that Users set up with these companies) and other techniques to collect information about you on our Services, other online services, like IP addresses, identifiers of your mobile device, conversion information, browsers usage and pages you have visited. This information may be used to deliver advertising and content according the Users interests, better understand of the Services usage from the Users and analyzing and tracking data. These third party companies may also share this information with their customers and clients. This Privacy Policy does not apply to, and we are not responsible for, third-party cookies, web beacons, or other tracking technologies.
-
- 
-
-Children Under Fifteen
-
- 
-
-PatrickStudio does not knowingly collect personally identifiable information from children under the age of fifteen. If you are under the age of thirteen, you must ask your parent or guardian for permission to use this website.
-
- 
-
-Disclaimers
-
-(1) All the icons, logos, characters and brands shown or represented in this game are copyright or trademark of their respective owners. We only use the low resolution logo images in our APP for use of identification qualifies as fail use under copyright law.
-
-(2) All the brand base on the international resource, please kindly know that some brands have different name in different countries.
-
-(3) All the responsibility for the copyrights, trademarks are not relate towith third parties, such as, Apple Inc, Google Play,etc. They hereby disclaims any and all liability for any loss or liability relating to such information in any way.
-
-Agreement to Privacy Policy
-
- 
-
-PatrickStudio gives you great supporting for Privacy. Before download our products, please read our Privacy Policy meticulous. By downloading our products, you are consenting to the collection, use and disclosure of your personal information and to the terms of our Privacy Policy.
-
- 
-
-Update this Statement
-
- 
-
-PatrickStudio keeps the right to modify, alter, or update these Terms and Conditions occasionally, and you agree to be bound by such modifications, alterations, or updates. Of course, we are encourage you to review this Statement in a certain frequency. And know more PatrickStudio how to protect and record the user information.
-
- 
-
-Contact us
-
- 
-
-PatrickStudio welcomes you questions or suggestions regarding this Statement of Privacy. If there are any requires regarding this privacy policy you may contact us using the information below.
-
-Mail: PatrickLeeGoGoGo@gmail.com</p>
-		</p>Mail: PatrickLeeGoGoGo@gmail.com</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+<div class="container">
+		<div class="content">
+			<p>
+				&nbsp;</p>
+			<p align="center" style="font-size:36px;">
+				<strong>Privacy Policy</strong></p>
+			<p>
+				Last modified: 13<sup>th</sup> Jan, 2016.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				This Statement shows that KKZAP promises to protect the user privacy information. In view of the features of online website, KKZAP will interact with users inevitably. So, the statement of Privacy applies to the company and the user and governs data collection and usage. By using the KKZAP Websites, you consent to the data practices described in this statement.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Collection of non-Personal Information</strong></p>
+			<p>
+				Non-personal information means that these data do not directly identify the user. Information about your computer hardware and software may be collected by KKZAP, such as, type of operating devices, offering access to your ISP`s domain name. By collecting these information, KKZAP also carry out traffic statistics, so as to improve the management and services.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Collection of Personal Information</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP may also collect anonymous demographic information, which is not unique to you, such as your email address. We may gather additional personal or non-personal information in the future.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				When you log in our website, it needs to provides some information about yours, with your consent and confirmation, we will collect your personal information through registration forms and other forms. These information maybe include: your basic information( name, sex, age, the date of birth, ID number, Tel No., address, email address ), social networking basic profile information(Apps have a basic connection to a user's Facebook account to ask for permission to post on the user's behalf or to read other fields from the user's timeline or their friends' timelines),Request read permissions (to fill the stream with photos, the user must grant the app two "read permissions" that let the app read the user's photos and their friends' photos), Request publish permissions (the user must grant the app a "publish permission" to share photos).</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				These information are used for the operation of the services, to maintain quality of the service, and to provide general statistics regarding use of the KKZAP website. Please be aware that KKZAP cannot provides your personal information for other purposes or the third parties without your consent and confirmation.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP encourages you to review the privacy statements of websites you choose to link to from <strong>www.kkzap.com</strong>. So that you can know more about which kinds of information we are collect, use and share. Obviously, we will keep users information and not bring to other Websites. We are not responsible for the privacy statements or other content on websites outside of our website.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>User`s right</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				For the user personal information, they are keep some rights in the social activities:</p>
+			<ul>
+				<li>
+					View the Personal information at any timeComplement and modify the Personal</li>
+				<li>
+					Information at any time</li>
+				<li>
+					Request delete the Personal information at any time</li>
+			</ul>
+			<p>
+				&nbsp;</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Use of your Personal Information</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP collects and uses your personal information to operate its websites and deliver the services you have requested. We may also use your personally identifiable information to inform you of other products or services available from data system and its affiliates. Usually, KKZAP will contact you by e-mail or phone in 7 workdays. Sometimes, we may also contact you via surveys to conduct research about you opinion of current services or of potential new services that may be offered.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP keep track of the websites and pages our users visit within these information which they are collected, in order to know and understand what kinds of products or services are the most popular. This data is used to deliver customized content and advertising within KKZAP to customers whose behavior indicates that they are interested in a particular subject field. In addition, the personal information Users provide will allow KKZAP to send them messages regarding, among other things, new products, features, enhancements, special offers, upgrade opportunities, contests and other events of their interest. Users may also later opt out of these communications by sending us an email or simply just by uninstalling our Services.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Security of your Personal Information</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP secures your personal information from unauthorized access, use or disclosure.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP will disclose your personal information, without notice, only if demand to do like this by law or in the good faith belief that such action is necessary to:</p>
+			<p>
+				(a) Conform to the edicts of the law or comply with legal process served on KKZAP or the site;</p>
+			<p>
+				(b) Protect and defend the rights or property of KKZAP;</p>
+			<p>
+				(c) And, act under exigent circumstances to protect the personal safety, or the public.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				Infrequency, we can share data with trusted partners to help perform statistical analysis, send you email or personal mail, provide customer support, or arrange for deliveries. Meanwhile, KKZAP guarantees that they do not sell, rent or lease its customer lists to third parties. All such third parties are prohibited from using your personal information and we are required to maintain the confidentiality of your information.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Analytics, Advertising and Other Services Provided by Other Companies</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				We may allow other third parties companies to serve advertisements in our Services, provide analytics services or other services for the Users experience. These companies may use cookies, web beacons, Users account information (that Users set up with these companies) and other techniques to collect information about you on our Services, other online services, like IP addresses, identifiers of your mobile device, conversion information, browsers usage and pages you have visited. This information may be used to deliver advertising and content according the Users interests, better understand of the Services usage from the Users and analyzing and tracking data. These third party companies may also share this information with their customers and clients. This Privacy Policy does not apply to, and we are not responsible for, third-party cookies, web beacons, or other tracking technologies.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Children Under Fifteen</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP does not knowingly collect personally identifiable information from children under the age of fifteen. If you are under the age of thirteen, you must ask your parent or guardian for permission to use this website.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Disclaimers</strong></p>
+			<p>
+				(1) All the icons, logos, characters and brands shown or represented in this game are copyright or trademark of their respective owners. We only use the low resolution logo images in our APP for use of identification qualifies as fail use under copyright law.</p>
+			<p> 
+				(2) All the brand base on the international resource, please kindly know that some brands have different name in different countries.</p>
+			<p> 
+				(3) All the responsibility for the copyrights, trademarks are not relate towith third parties, such as, Apple Inc, Google Play,etc. They hereby disclaims any and all liability for any loss or liability relating to such information in any way.</p>
+			<p>
+				<strong>Agreement to Privacy Policy </strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP gives you great supporting for Privacy. Before download our products, please read our Privacy Policy meticulous. By downloading our products, you are consenting to the collection, use and disclosure of your personal information and to the terms of our Privacy Policy.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Update this Statement</strong></p>
+			<p>
+				&nbsp;</p>
+			<p>
+				KKZAP keeps the right to modify, alter, or update these Terms and Conditions occasionally, and you agree to be bound by such modifications, alterations, or updates. Of course, we are encourage you to review this Statement in a certain frequency. And know more KKZAP how to protect and record the user information.</p>
+			<p>
+				&nbsp;</p>
+			<p>
+				<strong>Contact us</strong></p>
+			<p>
+				&nbsp;</p>
+			<p align="left">
+				KKZAP welcomes you questions or suggestions regarding this Statement of Privacy. If there are any requires regarding this privacy policy you may contact us using the information below.</p>
+			<p align="left">
+				Mail: <strong>kkzapfeedback@hotmail.com</strong></p>
+		</div>
+		</div>
 		<footer>
     		<ul>
         		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
