--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				This Statement shows that KKZAP promises to protect the user privacy information. In view of the features of online website, KKZAP will interact with users inevitably. So, the statement of Privacy applies to the company and the user and governs data collection and usage. By using the KKZAP Websites, you consent to the data practices described in this statement.</p>
+				This Statement shows that PatrickStudio promises to protect the user privacy information. In view of the features of online website, PatrickStudio will interact with users inevitably. So, the statement of Privacy applies to the company and the user and governs data collection and usage. By using the PatrickStudio Websites, you consent to the data practices described in this statement.</p>
 			<p>
 				&nbsp;</p>
 			<p>
 				<strong>Collection of non-Personal Information</strong></p>
 			<p>
-				Non-personal information means that these data do not directly identify the user. Information about your computer hardware and software may be collected by KKZAP, such as, type of operating devices, offering access to your ISP`s domain name. By collecting these information, KKZAP also carry out traffic statistics, so as to improve the management and services.</p>
+				Non-personal information means that these data do not directly identify the user. Information about your computer hardware and software may be collected by PatrickStudio, such as, type of operating devices, offering access to your ISP`s domain name. By collecting these information, PatrickStudio also carry out traffic statistics, so as to improve the management and services.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -31,7 +31,7 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP may also collect anonymous demographic information, which is not unique to you, such as your email address. We may gather additional personal or non-personal information in the future.</p>
+				PatrickStudio may also collect anonymous demographic information, which is not unique to you, such as your email address. We may gather additional personal or non-personal information in the future.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -39,11 +39,11 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				These information are used for the operation of the services, to maintain quality of the service, and to provide general statistics regarding use of the KKZAP website. Please be aware that KKZAP cannot provides your personal information for other purposes or the third parties without your consent and confirmation.</p>
+				These information are used for the operation of the services, to maintain quality of the service, and to provide general statistics regarding use of the PatrickStudio website. Please be aware that PatrickStudio cannot provides your personal information for other purposes or the third parties without your consent and confirmation.</p>
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP encourages you to review the privacy statements of websites you choose to link to from <strong>www.kkzap.com</strong>. So that you can know more about which kinds of information we are collect, use and share. Obviously, we will keep users information and not bring to other Websites. We are not responsible for the privacy statements or other content on websites outside of our website.</p>
+				PatrickStudio encourages you to review the privacy statements of websites you choose to link to from <strong>patrickunity.github.io</strong>. So that you can know more about which kinds of information we are collect, use and share. Obviously, we will keep users information and not bring to other Websites. We are not responsible for the privacy statements or other content on websites outside of our website.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -71,11 +71,11 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP collects and uses your personal information to operate its websites and deliver the services you have requested. We may also use your personally identifiable information to inform you of other products or services available from data system and its affiliates. Usually, KKZAP will contact you by e-mail or phone in 7 workdays. Sometimes, we may also contact you via surveys to conduct research about you opinion of current services or of potential new services that may be offered.</p>
+				PatrickStudio collects and uses your personal information to operate its websites and deliver the services you have requested. We may also use your personally identifiable information to inform you of other products or services available from data system and its affiliates. Usually, PatrickStudio will contact you by e-mail or phone in 7 workdays. Sometimes, we may also contact you via surveys to conduct research about you opinion of current services or of potential new services that may be offered.</p>
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP keep track of the websites and pages our users visit within these information which they are collected, in order to know and understand what kinds of products or services are the most popular. This data is used to deliver customized content and advertising within KKZAP to customers whose behavior indicates that they are interested in a particular subject field. In addition, the personal information Users provide will allow KKZAP to send them messages regarding, among other things, new products, features, enhancements, special offers, upgrade opportunities, contests and other events of their interest. Users may also later opt out of these communications by sending us an email or simply just by uninstalling our Services.</p>
+				PatrickStudio keep track of the websites and pages our users visit within these information which they are collected, in order to know and understand what kinds of products or services are the most popular. This data is used to deliver customized content and advertising within PatrickStudio to customers whose behavior indicates that they are interested in a particular subject field. In addition, the personal information Users provide will allow PatrickStudio to send them messages regarding, among other things, new products, features, enhancements, special offers, upgrade opportunities, contests and other events of their interest. Users may also later opt out of these communications by sending us an email or simply just by uninstalling our Services.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -83,21 +83,21 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP secures your personal information from unauthorized access, use or disclosure.</p>
+				PatrickStudio secures your personal information from unauthorized access, use or disclosure.</p>
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP will disclose your personal information, without notice, only if demand to do like this by law or in the good faith belief that such action is necessary to:</p>
+				PatrickStudio will disclose your personal information, without notice, only if demand to do like this by law or in the good faith belief that such action is necessary to:</p>
 			<p>
-				(a) Conform to the edicts of the law or comply with legal process served on KKZAP or the site;</p>
+				(a) Conform to the edicts of the law or comply with legal process served on PatrickStudio or the site;</p>
 			<p>
-				(b) Protect and defend the rights or property of KKZAP;</p>
+				(b) Protect and defend the rights or property of PatrickStudio;</p>
 			<p>
 				(c) And, act under exigent circumstances to protect the personal safety, or the public.</p>
 			<p>
 				&nbsp;</p>
 			<p>
-				Infrequency, we can share data with trusted partners to help perform statistical analysis, send you email or personal mail, provide customer support, or arrange for deliveries. Meanwhile, KKZAP guarantees that they do not sell, rent or lease its customer lists to third parties. All such third parties are prohibited from using your personal information and we are required to maintain the confidentiality of your information.</p>
+				Infrequency, we can share data with trusted partners to help perform statistical analysis, send you email or personal mail, provide customer support, or arrange for deliveries. Meanwhile, PatrickStudio guarantees that they do not sell, rent or lease its customer lists to third parties. All such third parties are prohibited from using your personal information and we are required to maintain the confidentiality of your information.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -115,7 +115,7 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP does not knowingly collect personally identifiable information from children under the age of fifteen. If you are under the age of thirteen, you must ask your parent or guardian for permission to use this website.</p>
+				PatrickStudio does not knowingly collect personally identifiable information from children under the age of fifteen. If you are under the age of thirteen, you must ask your parent or guardian for permission to use this website.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -131,7 +131,7 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP gives you great supporting for Privacy. Before download our products, please read our Privacy Policy meticulous. By downloading our products, you are consenting to the collection, use and disclosure of your personal information and to the terms of our Privacy Policy.</p>
+				PatrickStudio gives you great supporting for Privacy. Before download our products, please read our Privacy Policy meticulous. By downloading our products, you are consenting to the collection, use and disclosure of your personal information and to the terms of our Privacy Policy.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -139,7 +139,7 @@
 			<p>
 				&nbsp;</p>
 			<p>
-				KKZAP keeps the right to modify, alter, or update these Terms and Conditions occasionally, and you agree to be bound by such modifications, alterations, or updates. Of course, we are encourage you to review this Statement in a certain frequency. And know more KKZAP how to protect and record the user information.</p>
+				PatrickStudio keeps the right to modify, alter, or update these Terms and Conditions occasionally, and you agree to be bound by such modifications, alterations, or updates. Of course, we are encourage you to review this Statement in a certain frequency. And know more PatrickStudio how to protect and record the user information.</p>
 			<p>
 				&nbsp;</p>
 			<p>
@@ -147,16 +147,11 @@
 			<p>
 				&nbsp;</p>
 			<p align="left">
-				KKZAP welcomes you questions or suggestions regarding this Statement of Privacy. If there are any requires regarding this privacy policy you may contact us using the information below.</p>
+				PatrickStudio welcomes you questions or suggestions regarding this Statement of Privacy. If there are any requires regarding this privacy policy you may contact us using the information below.</p>
 			<p align="left">
-				Mail: <strong>kkzapfeedback@hotmail.com</strong></p>
+				Mail: <strong>PatrickLeeGoGoGo@gmail.com</strong></p>
 		</div>
 		</div>
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
+	
 	</body>
 </html>
